--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
-  "name": "Dodecabrawlin-Remake",
-  "version": "1.0.0",
-  "description": "A remake of the Dodecabrawlin' game.",
-  "main": "script.js",
-  "scripts": {
-    "lint": "biome lint ./",
-    "format": "biome format --write ./",
-    "check": "biome check --apply ./"
-  },
-  "keywords": [
-    "game",
-    "javascript",
-    "html",
-    "css"
-  ],
-  "author": "",
-  "license": "ISC",
-  "packageManager": "pnpm@10.8.0",
-  "devDependencies": {
-    "@biomejs/biome": "1.9.4"
-  }
+	"name": "Dodecabrawlin-Remake",
+	"version": "1.0.0",
+	"description": "A remake of the Dodecabrawlin' game.",
+	"main": "script.js",
+	"scripts": {
+		"lint": "biome lint ./",
+		"format": "biome format --write ./",
+		"check": "biome check --apply ./"
+	},
+	"keywords": ["game", "javascript", "html", "css"],
+	"author": "",
+	"license": "ISC",
+	"packageManager": "pnpm@10.8.0",
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4"
+	}
 }
